--- a/env.sh.example
+++ b/env.sh.example
@@ -3,3 +3,6 @@
 usersEndpoint="http://your-app-here.herokuapp.com/api/user-list"
 slackEndpoint="https://hooks.slack.com/services/../../.."
 checkEndpoint="https://your-app-here.herokuapp.com/api/check-in"
+
+slackIcon=":ghost:"
+slackName="OfficeBot"
